--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0"
 cards:
-  message: "Welcome to eazybank cards related prod APIs"
+  message: "Welcome to eazybank cards related prodution APIs"
   contactDetails:
     name: "Mahmoud rezk"
     email: "mahmoudrezk514@gmail.com"
