--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to eazybank accounts related local APIs"
+  message: "Welcome to eazybank accounts related localll APIs"
   contactDetails:
     name: "Mahmoud rezk"
     email: "mahmoudrezk514@gmail.com"
