--- a/eurekaserver.yml
+++ b/eurekaserver.yml
@@ -6,4 +6,4 @@ eureka:
   client:
     fetchRegistry: false
     registerWithEureka: false
-    serviceUrl: http://${eureka.instance.hostname}:${server.port}/eureka/
+    serviceUrl: "http://${eureka.instance.hostname}:${server.port}/eureka/"
